--- a/4장_처리율_제한_장치의_설계.md
+++ b/4장_처리율_제한_장치의_설계.md
@@ -148,8 +148,8 @@
 > [Resilience4j](https://resilience4j.readme.io/docs) _ a lightweight Fault Tolerance Library
 
 - TimeLimiter : 요청 응답시간 Timeout 시 Exception 발생
-- CircuitBreaker : `일정 시간` or `일정 개수` 동안의 **실패율 (failure rate)** 계산 (threshold 초과 시 circuit open)
+- CircuitBreaker : `일정 시간` or `일정 개수` 동안의 **실패율 (failure rate)** 계산 (=> threshold 초과 시 circuit open)
 - RateLimiter : `일정 시간` 동안 **몇 개의 요청** 을 허용할지 (=SUM)
-- BulkHead : 몇개의 동시 호풀을 허용할지 (=MAX)
+- BulkHead : `단위 시간` 동안 **몇 개의 동시 호출** 을 허용할지 (=MAX)
 - Retry : Exception 발생 시 재 시도 or 무시
 
